syntax = "proto3";

option csharp_namespace = "GrpcClient";

package greet;

// The greeting service definition.
service SendRequestToClient {
  // Sends a BidirectionalStream
  rpc BidirectionalStream(HelloRequest) returns (HelloReply);
}

// The request message for introduction
message HelloRequest {
  string message = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
